Fix sidebar scroll and menu z-index (#587)

--- a/source/_static/scss/includes/_aside.scss
+++ b/source/_static/scss/includes/_aside.scss
@@ -12,7 +12,7 @@ div.sidebar {
     transition: opacity 400ms, transform 300ms;
     padding: var(--content-padding);
     overflow-y: auto;
-    height: calc(100vh - 6.0625rem); // 6.0625rem = header height
+    height: 100vh;
     z-index: $z-index-header - 2;
     margin: 0;
     border: none;
